The directions will take longer than anticipated but I have it done by tonight

--- a/directions.html
+++ b/directions.html
@@ -27,6 +27,17 @@
     <div id="map"></div>
 
     <script>
+funttion placeLocations(){
+
+	var marker = new google.maps.Marker({
+    map: map,
+    position: myLatLng,
+    title: 'Hello World!'
+  });
+}	
+	
+  
+  
 function initMap() {
   var origin_place_id = null;
   var destination_place_id = null;
