--- a/directions.html
+++ b/directions.html
@@ -27,13 +27,8 @@
     <div id="map"></div>
 
     <script>
-funttion placeLocations(){
-
-	var marker = new google.maps.Marker({
-    map: map,
-    position: myLatLng,
-    title: 'Hello World!'
-  });
+function placeLocations(){
+  
 }	
 	
   
@@ -47,11 +42,19 @@ function initMap() {
     center: {lat: 43.1656, lng: -77.6114},
     zoom: 13
   });
+  
+   
   var directionsService = new google.maps.DirectionsService;
   var directionsDisplay = new google.maps.DirectionsRenderer;
   directionsDisplay.setMap(map);
   directionsDisplay.setPanel(document.getElementById('right-panel'));
-
+  
+  var marker = new google.maps.Marker({
+    map: map,
+    position: {lat: 43.1656, lng: -77.6114},
+    title: 'Test Marker' 
+	}); 
+  	
   var origin_input = document.getElementById('origin-input');
   var destination_input = document.getElementById('destination-input');
   var modes = document.getElementById('mode-selector');
