--- a/directions.html
+++ b/directions.html
@@ -27,70 +27,135 @@
     <div id="map"></div>
 
     <script>
-function placeLocations(){
-  
-}	
-	
-  
-  
-function initMap() {
-  var origin_place_id = null;
-  var destination_place_id = null;
-  var travel_mode = google.maps.TravelMode.WALKING;
-  var map = new google.maps.Map(document.getElementById('map'), {
-    mapTypeControl: false,
-    center: {lat: 43.1656, lng: -77.6114},
-    zoom: 13
-  });
+	function initMap() {
+		var markers = [];
+		var origin_place_id = null;
+		var destination_place_id = null;
+		var travel_mode = google.maps.TravelMode.WALKING;
+		var map = new google.maps.Map(document.getElementById('map'), {
+			mapTypeControl: false,
+			center: {lat: 43.1656, lng: -77.6114},
+			zoom: 13
+		});
   
    
-  var directionsService = new google.maps.DirectionsService;
-  var directionsDisplay = new google.maps.DirectionsRenderer;
-  directionsDisplay.setMap(map);
-  directionsDisplay.setPanel(document.getElementById('right-panel'));
-  
-  var marker = new google.maps.Marker({
-    map: map,
-    position: {lat: 43.1656, lng: -77.6114},
-    title: 'Test Marker' 
-	}); 
-  	
-  var origin_input = document.getElementById('origin-input');
-  var destination_input = document.getElementById('destination-input');
-  var modes = document.getElementById('mode-selector');
-
-  map.controls[google.maps.ControlPosition.TOP_LEFT].push(origin_input);
-  map.controls[google.maps.ControlPosition.TOP_LEFT].push(destination_input);
-  map.controls[google.maps.ControlPosition.TOP_LEFT].push(modes);
-
-  var origin_autocomplete = new google.maps.places.Autocomplete(origin_input);
-  origin_autocomplete.bindTo('bounds', map);
-  var destination_autocomplete =
-      new google.maps.places.Autocomplete(destination_input);
-  destination_autocomplete.bindTo('bounds', map);
-
-  // Sets a listener on a radio button to change the filter type on Places
-  // Autocomplete.
-  function setupClickListener(id, mode) {
-    var radioButton = document.getElementById(id);
-    radioButton.addEventListener('click', function() {
-      travel_mode = mode;
-    });
-  }
-  setupClickListener('changemode-walking', google.maps.TravelMode.WALKING);
-  setupClickListener('changemode-transit', google.maps.TravelMode.TRANSIT);
-  setupClickListener('changemode-driving', google.maps.TravelMode.DRIVING);
-
-  function expandViewportToFitPlace(map, place) {
-    if (place.geometry.viewport) {
-      map.fitBounds(place.geometry.viewport);
-    } else {
-      map.setCenter(place.geometry.location);
-      map.setZoom(17);
+		var directionsService = new google.maps.DirectionsService;
+		var directionsDisplay = new google.maps.DirectionsRenderer;
+		directionsDisplay.setMap(map);
+		directionsDisplay.setPanel(document.getElementById('right-panel'));  	
+		var origin_input = document.getElementById('origin-input');
+		var destination_input = document.getElementById('destination-input');
+		var modes = document.getElementById('mode-selector');
+		map.controls[google.maps.ControlPosition.TOP_LEFT].push(origin_input);
+		map.controls[google.maps.ControlPosition.TOP_LEFT].push(destination_input);
+		map.controls[google.maps.ControlPosition.TOP_LEFT].push(modes);
+		var origin_autocomplete = new google.maps.places.Autocomplete(origin_input);
+		origin_autocomplete.bindTo('bounds', map);
+		var destination_autocomplete = new google.maps.places.Autocomplete(destination_input);
+		destination_autocomplete.bindTo('bounds', map);
+		
+		//Add Carpool Marker
+		function getLongLat(){
+			if (!origin_place_id || !destination_place_id) {
+			return;
+			}
+			var place = origin_autocomplete.getPlace();
+			latitude =  places.geometry.location.A;
+			longitude = places.geometry.location.F;		
+		}
+	
+		function searchLocationNear(){
+			clearLocations();
+			getLongLat();
+			var radius = 25;
+			var searchUrl = 'carpoolXML.php?lat=' + latitude + '&lng=' + longitude + '&radius=' + radius;
+			downloadUrl(searchUrl,function(data) {
+				var xml = parseXml(data);
+				var markerNodes = xml.documentElement.getElementsByTagName("marker");
+				for (var i = 0; i < markerNodes.length; i++) {
+					var name = markerNodes[i].getAttribute("name");
+					var address = markerNodes[i].getAttribute("address");
+					var distance = parseFloat(markerNodes[i].getAttribute("distance"));
+					var latlng = new google.maps.LatLng(
+						parseFloat(markerNodes[i].getAttribute("lat")),
+						parseFloat(markerNodes[i].getAttribute("lng")));
+            createMarker(latlng);
+				}
+			}
+		}
+		function clearLocations() {
+			for (var i = 0; i < markers.length; i++) {
+				markers[i].setMap(null);
+			}			
+		}
+		function downloadUrl(url, callback) {
+			var request = window.ActiveXObject ?
+			new ActiveXObject('Microsoft.XMLHTTP') :
+			new XMLHttpRequest;
+			request.onreadystatechange = function() {
+			if (request.readyState == 4) {
+				request.onreadystatechange = doNothing;
+				callback(request.responseText, request.status);
+			}
+		};
+			request.open('GET', url, true);
+			request.send(null);
+		}
+	
+		function parseXml(str) {
+			if (window.ActiveXObject) {
+			var doc = new ActiveXObject('Microsoft.XMLDOM');
+			doc.loadXML(str);
+			return doc;
+			} else if (window.DOMParser) {
+				return (new DOMParser).parseFromString(str, 'text/xml');
+			}
+		}
+		function createMarker(latlng) {
+			var html = "Address will be added later";
+			if (!origin_place_id || !destination_place_id) {
+				return;
+			}			
+			marker = new google.maps.Marker({
+			map: map,
+			position: latlng
+			});       
+      
+			markers.push(marker);
     }
-  }
+		
+		
+		
+		
+		
+		
+		
 
-  origin_autocomplete.addListener('place_changed', function() {
+		// Sets a listener on a radio button to change the filter type on Places
+		// Autocomplete.
+		function setupClickListener(id, mode) {
+		var radioButton = document.getElementById(id);
+		radioButton.addEventListener('click', function() {
+		travel_mode = mode;
+		});
+		}
+		setupClickListener('changemode-walking', google.maps.TravelMode.WALKING);
+		setupClickListener('changemode-transit', google.maps.TravelMode.TRANSIT);
+		setupClickListener('changemode-driving', google.maps.TravelMode.DRIVING);
+
+	function expandViewportToFitPlace(map, place) {
+		if (place.geometry.viewport) {
+			map.fitBounds(place.geometry.viewport);
+		} else {
+		map.setCenter(place.geometry.location);
+		map.setZoom(17);
+		}
+	}
+	
+	
+	
+	
+	origin_autocomplete.addListener('place_changed', function() {
     var place = origin_autocomplete.getPlace();
     if (!place.geometry) {
       window.alert("Autocomplete's returned place contains no geometry");
@@ -103,7 +168,7 @@ function initMap() {
     origin_place_id = place.place_id;
     route(origin_place_id, destination_place_id, travel_mode,
           directionsService, directionsDisplay);
-  });
+	});
 
   destination_autocomplete.addListener('place_changed', function() {
     var place = destination_autocomplete.getPlace();
@@ -140,6 +205,9 @@ function initMap() {
 }
 
     </script>
+	
+	
+	
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNZmt2442shTeIGncL0NUqkNDmRWKQYLc&signed_in=true&libraries=places&callback=initMap"
         async defer></script>
   </body>
